src/styles.css
/* Meyer's CSS Reset v2.0 | 20110126
    http://meyerweb.com/eric/tools/css/reset/
    License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

html {
    background-color: #F4F3EE;
    font-family: 'Nunito', sans-serif;
}

h1 {
    font-size: 5rem;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    padding-top: 5%;
}

body {
    color: #463F3A;
}

#new-proj-btn {
    background-color: #463F3A;
    color: #F4F3EE;
    font-size: 1rem;
    padding: 1%;
    border-radius: 1rem;
    font-weight: 300;
    margin: 1% 0;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
}


.project {
  padding: 1.3rem;
  border: 2px solid red;
  height: auto;
  max-width: 25rem;
}

#newProjectForm div {
  display: flex;
  flex-direction: column;
}

#newProjectForm {
  display: flex;
  flex-direction: column;
  gap: .5rem;
}

.overlay {
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(3px);
}

.modal {
  background-color: #F4F3EE;
  padding: 1rem;
}

.modal button {
  background-color: #463F3A;
  color: #F4F3EE;
  border-radius: .6rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: .5rem;
}

.modal .btn-container {
  display: flex;
  flex-direction: column;
}

.hidden {
  display: none;
}

#close-modal {
  border-radius: 50%;
  aspect-ratio: 1 / 1;
  background-color: #463F3A;
  color: #F4F3EE;
  justify-self: flex-end;
  align-self: flex-end;
}

a {
  color:#463F3A
}

button[type="submit"] {
  margin-bottom: .5rem;
}

dialog::backdrop {
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(3px);
}

.todo-item {
  display: grid;
  grid-template-columns: auto 2fr auto auto;
  align-items: center;
}

.todo-item .priority {
  text-align: center;
}

.todo-item label input {
  margin-right: .5rem;
}

.todo-item label {
  display: grid;
  grid-template-columns: auto 1fr;
}

.delete-btn:hover {
    filter: brightness(0) saturate(100%) invert(12%) sepia(94%) saturate(5836%) hue-rotate(3deg) brightness(105%) contrast(118%);
    transform: scale(1.1);
}

.delete-btn {
  height: 2.5rem;
  cursor: pointer;
  transition: all .1s ease-in-out;
}

.todo-item span {
  display: flex;
  align-items: center;
  padding-right: 1rem;
  padding-left: .2rem;
}

.todo-item input[type="checkbox"] {
  transform: scale(1.2);
}

.todo-item span:focus {
  outline: none;
}

.project .title button {
  /* border: none; */
  margin-left: auto;
  border-radius: 50%;
}

h2.title {
  display: flex;
  padding-bottom: 1rem;
  font-size: 1.5rem;
  font-weight: 500;
  justify-content: center;
  align-items: center;
}

h2.title button {
  height: 2rem;
}

.bx-message-square-add {
    transition: all .1s ease-in-out;
}

.title a {
  margin-right: 1rem;
}

.bx-message-square-add:hover {
  transform: scale(1.1);
}

.addToDoWrapper {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin: 0.5rem 0;
}

.addToDoField {
  display: none;
  margin-left: 0.5rem;
  padding: 0.3rem 0.6rem;
  border-radius: 0.5rem;
  border: 1px solid #ccc;
  font-size: 1rem;
}

.addToDoPriority {
  display: none;
}

.addToDoField.visible,
.addToDoPriority.visible {
  display: inline-block;
}

.priority {
  padding: 0.2rem 0.6rem;
  border-radius: 0.5rem;
  border: 1px solid #ccc;
  font-size: 1rem;
}

p.desc {
  padding-bottom: .5rem;
}

